--- a/TG2/app/src/main/res/values/strings.xml
+++ b/TG2/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">TG2</string>
     <string name="currentTime">currentTime</string>
     <string name="action_settings">Settings</string>
+    <string name="name_medicine">Nome Medicamento</string>
+    <string name="icon_medicine">Ícone Medicamento</string>
+    <string name="timing_to_take">Horário Toma</string>
+    <string name="take_frequecy">Frequência Medicamento</string>
+    <string name="add_medicine">Adicionar</string>
 </resources>
