--- a/TG2/app/src/main/res/values/strings.xml
+++ b/TG2/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
     <string name="app_name">TG2</string>
-    <string name="currentTime">currentTime</string>
-    <string name="action_settings">Settings</string>
+    <string name="current_time">Tempo Atual</string>
+    <string name="action_settings">Definições</string>
     <string name="name_medicine">Nome Medicamento</string>
     <string name="icon_medicine">Ícone Medicamento</string>
     <string name="timing_to_take">Horário Toma</string>
     <string name="take_frequecy">Frequência Medicamento</string>
     <string name="add_medicine">Adicionar</string>
+    <string name="medicine_in_plan">Medicamentos no Plano</string>
+    <string name="previously_medicine_in_plan">Medicamentos Anteriormente no Plano</string>
 </resources>
