--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="change_icon">Alterar Ícone</string>
     <string name="currentTime">00:00</string>
     <string name="medicamentosTitle">Medicamentos</string>
+    <string name="addMedsButton">Adicionar Medicamentos</string>
+    <string name="settingsText">Definições</string>
 
 </resources>
