Adicionei um porradão de coisas. Verifica tudo, vê se gostas do funcionamento, amanhã logo revejo e tento melhorar/otimizar. A app já está praticamente "funcional", em termos da navegação. Agora é introduzir as funcionalidades projetadas para o Adicionar_Medicamentos/Medicamentos. Depois é a página principal. Lê os TODOs todos, e à frente deles mete um visto, para eu saber que viste.
Bora ter 20 nesta merda caralho!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

Signed-off-by: GitGilDev <henriquegildev@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,8 @@
     <string name="medicamentosTitle">Medicamentos</string>
     <string name="addMedsButton">Adicionar Medicamentos</string>
     <string name="settingsText">Definições</string>
+    <string name="logoDescription">App Logo</string>
+    <string name="menuButtonDesc">Menu Button</string>
+    <string name="topViewTitleText">Parte da Manhã</string>
 
 </resources>
