Alterei o placeholder do nome de medicamento. LÊ O COMMIT ANTERIOR. To sleep I go. yeeeeeeeeeeeeeeeeeeeeet
Signed-off-by: GitGilDev <henriquegildev@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="medicine_in_plan">Medicamentos no Plano</string>
     <string name="previously_medicine_in_plan">Medicamentos Anteriormente no Plano</string>
     <string name="to_take_taken_medicine">Faltam/Tomados</string>
+    <string name="medicine_placeholder">Exemplo: Ibuprofeno</string>
     <string name="medicine_name_1">Ibuprofeno</string>
     <string name="medicine_name_2">Clavamox</string>
     <string name="medicine_name_3">Kestine</string>
