--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
     <string name="topViewTitleText">Parte da Manhã</string>
     <string name="about">Acerca</string>
     <string name="home">Home</string>
+    <string name="ativate_dark_mode">Ativar modo escuro</string>
+    <string name="select_med_icon">Selecione o ícone do medicamento</string>
 </resources>
