Added local time to top of Main.
Signed-off-by: GitGilDev <henriquegildev@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="home">Home</string>
     <string name="ativate_dark_mode">Ativar modo escuro</string>
     <string name="select_med_icon">Selecione o ícone do medicamento</string>
+    <string name="zero_time">00:00:00</string>
 </resources>
