--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="ativate_dark_mode">Ativar modo escuro</string>
     <string name="select_med_icon">Selecione o ícone do medicamento</string>
     <string name="zero_time">00:00:00</string>
+    <string name="taken_pill">Tomou?</string>
 </resources>
