--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,5 @@
     <string name="select_the_take_hour">Selecione a hora da toma</string>
     <string name="select_take_hour">Hora toma</string>
     <string name="top_view_title_text_evening">Parte da Tarde</string>
-    <string name="planforday">Medicamentos do Dia</string>
+    <string name="plan_for_day">Medicamentos do Dia</string>
 </resources>
