--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,8 @@
     <string name="select_take_hour">Hora toma</string>
     <string name="top_view_title_text_evening">Parte da Tarde</string>
     <string name="plan_for_day">Medicamentos do Dia</string>
+    <string name="about_text">Este projecto foi desemvolvido em ambito da UC de Interação Pesssoa Computador do curso de Engenharia Informática da ESTIG, orientada pelo docente Luís Garcia.</string>
+    <string name="about_authors">Autores:</string>
+    <string name="about_authors_names">Henrique Gil(20435) e Gabriel Gomes(19932)</string>
+    <string name="app_version">Versão: 0.0.2</string>
 </resources>
