--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -16,6 +16,8 @@
     <string name="medicine_name_3">Kestine</string>
     <string name="change_icon">Change Icon</string>
     <string name="current_time">00:00</string>
+    <string name="hour_to_take">Admission Time</string>
+    <string name="med_dose">Medicine Dose</string>
     <string name="med_title">Medicines</string>
     <string name="add_meds_button">Add Medicines</string>
     <string name="settingsText">Settings</string>
