--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -4,8 +4,7 @@
     <string name="action_settings">Settings</string>
     <string name="name_medicine">Name Medicine</string>
     <string name="icon_medicine">Icon Medicine</string>
-    <string name="timing_to_take">Timming to take</string>
-    <string name="take_frequecy">Take Frequecy</string>
+    <string name="medicine_dose_placeholder">Exemaple: 100mg</string>
     <string name="add_medicine">Add Medicine</string>
     <string name="medicine_in_plan">Medicine in Plan</string>
     <string name="previously_medicine_in_plan">Medicine Previously in Plan</string>
